# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: SonarCloud.yml
.github/workflows/: SonarCloud.yml  gendiff-check.yml
gendiff/: __init__.py  main.py
gendiff/data/: file3.json  file4.json
gendiff/formatters/: formatter.py  json.py  json_.py  plain.py  stylish.py  temp.py  temp2
gendiff/modules/: __init__.py  arg_parsing.py  auxiliary.py  cli.py  diff_building.py  file_parsing.py  main.py
gendiff/scripts/: gendiff_.py  main.py
tests/: test_gen_diff.py
tests/fixtures/: result_json
